--- a/index.html
+++ b/index.html
@@ -17,21 +17,19 @@
 <div id="main">
     <div id="header">
         <div id="header-container">
-            <div id="header-content">
-                <div id="burger">
-                    <span></span>
-                </div>
-                <div id="menu">
-                    <a href="#rituals">Услуги</a>
-                    <a href="#masters">Мастера</a>
-                    <a href="#gallery">Галерея фото</a>
-                    <a href="#block-question">FAQ</a>
-                </div>
-                <div class="logo">
-                    <a class="logo-link" href="#main">White Lotus
-                        <div>Массажный салон</div>
-                    </a>
-                </div>
+            <div id="burger">
+                <span></span>
+            </div>
+            <div id="menu">
+                <a href="#rituals">Услуги</a>
+                <a href="#masters">Мастера</a>
+                <a href="#gallery">Галерея фото</a>
+                <a href="#block-question">FAQ</a>
+            </div>
+            <div class="logo">
+                <a class="logo-link" href="#main">White Lotus
+                    <div>Массажный салон</div>
+                </a>
             </div>
             <div id="phone-number">+7 (981) 458-85-96</div>
         </div>
@@ -58,12 +56,12 @@
     <div id="advantages-rose">
         <img class="advaleftrose1" src="img/advaleftrose1.png" alt="">
         <img class="advaleftrose2" src="img/advaleftrose2.png" alt="">
-        <img class="advarightrose1" src="img/advarightrose1.png" alt="">
         <img class="advarightrose2" src="img/advarightrose2.png" alt="">
     </div>
     <div id="advantages-container">
         <h2 class="block-title">Что вас ждет в нашем салоне</h2>
         <div id="advantages-first" class="wow animate__fadeInLeft">
+            <img class="advarightrose1" src="img/advarightrose1.png" alt="">
             <div class="advantage">
                 <img class="advantage-img" src="img/adva1.png" alt="">
                 <div class="advantage-text">Большой выбор СПА-ритуалов и программ на любой вкус со строгим соблюдением
@@ -185,7 +183,7 @@
                 Сходите на процедуру массажа камнями и мы сделаем вам альгинатную маску!
             </div>
             <div id="present-action">
-                <button class="btn open-popup">Записаться</button>
+                <button class="btn open-popup">Записаться на ритуал</button>
             </div>
         </div>
         <div id="present-img">
@@ -275,6 +273,7 @@
                 наших салонах вы смогли расслабиться и получить настоящее удовольствие от наших программ.
             </div>
         </div>
+        <img class="galleryrose2" src="img/galleryrose2.png" alt="">
     </div>
     <div id="gallery-slider" class="magnific">
         <div class="gallery-photo">
@@ -329,7 +328,6 @@
         </div>
     </div>
     <div class="arrows-content"></div>
-    <img class="galleryrose2" src="img/galleryrose2.png" alt="">
     <img class="galleryroseleft1" src="img/galleryroseleft1.png" alt="">
 </div>
 <!--/gallery-->
@@ -339,7 +337,7 @@
         <div id="question-content">
             <div id="questions-accordion">
                 <div class="questions-accordion-info">
-                    <div class="questions-accordion-title">Как я могу записаться на процедуру?</div>
+                    <div class="questions-accordion-title">Как я могу записаться на процедуру?<span id="arrows1"></span></div>
                     <div>
                         <p class="questions-accordion-text">Вы можете записаться на процедуру онлайн прямо на нашем
                             сайте.
@@ -350,13 +348,13 @@
                     </div>
                 </div>
                 <div class="questions-accordion-info">
-                    <div class="questions-accordion-title">Нужно ли предварительно записываться на процедуры?</div>
+                    <div class="questions-accordion-title">Нужно ли предварительно записываться на процедуры?<span id="arrows2"></span></div>
                     <div>
                         <p class="questions-accordion-text"> Конечно! Предварительная запись, обязательна!</p>
                     </div>
                 </div>
                 <div class="questions-accordion-info">
-                    <div class="questions-accordion-title">Какие противопоказания есть для массажей?</div>
+                    <div class="questions-accordion-title">Какие противопоказания есть для массажей?<span id="arrows3"></span></div>
                     <div>
                         <p class="questions-accordion-text"> Многим кажется, что массаж - это вполне безобидная лечебная
                             процедура. Однако, важно учитывать,
@@ -381,7 +379,7 @@
                     </div>
                 </div>
                 <div class="questions-accordion-info">
-                    <div class="questions-accordion-title">Что нужно брать с собой для массажа?</div>
+                    <div class="questions-accordion-title">Что нужно брать с собой для массажа?<span id="arrows4"></span></div>
                     <div>
                         <p class="questions-accordion-text">При предварительной записи уточните у администратора
                             необходимо
@@ -393,7 +391,7 @@
                     </div>
                 </div>
                 <div class="questions-accordion-info">
-                    <div class="questions-accordion-title">Могу я провести в вашем салоне девичник?</div>
+                    <div class="questions-accordion-title">Могу я провести в вашем салоне девичник?<span id="arrows5"></span></div>
                     <div>
                         <p class="questions-accordion-text">Конечно! Территория умиротворения и красоты White Lotus,
                             предлагает провести девичник в спа! Спа-вечеринку с возможностью одновременного обслуживания
@@ -436,11 +434,6 @@
 </div>
 <!--/questions-->
 <div id="contact">
-    <div id="contact-rose">
-        <img class="contactroseright1" src="img/contactroseright1.png" alt="">
-        <img class="contactroseright2" src="img/contactroseright2.png" alt="">
-        <img class="contactroseright3" src="img/contactroseright3.png" alt="">
-    </div>
     <div id="contact-container">
         <div id="contact-info">
             <h2 class="block-title">Контакты</h2>
@@ -468,6 +461,11 @@
             </div>
         </div>
         <div id="contact-map">
+            <div id="contact-rose">
+                <img class="contactroseright1" src="img/contactroseright1.png" alt="">
+                <img class="contactroseright2" src="img/contactroseright2.png" alt="">
+                <img class="contactroseright3" src="img/contactroseright3.png" alt="">
+            </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5919.881726615691!2d27.64609473047438!3d53.92629655931417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbceeed39c6b71%3A0xc76e49e6316331d5!2z0YPQuy4g0JbQsNGB0LzQuNC90L7QstCw0Y8sINCc0LjQvdGB0LosINCR0LXQu9Cw0YDRg9GB0Yw!5e0!3m2!1sru!2sua!4v1605706094599!5m2!1sru!2sua"
                     width="792" height="471" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
@@ -508,7 +506,7 @@
             </div>
             <div class="youtube">
                 <a href="https://www.youtube.com" target="_blank">
-                    <svg height="512pt" viewBox="0 -77 512.00213 512" width="512pt" xmlns="http://www.w3.org/2000/svg">
+                    <svg height="24px" viewBox="0 -77 512.00213 512" width="42px" xmlns="http://www.w3.org/2000/svg">
                         <path d="m501.453125 56.09375c-5.902344-21.933594-23.195313-39.222656-45.125-45.128906-40.066406-10.964844-200.332031-10.964844-200.332031-10.964844s-160.261719 0-200.328125 10.546875c-21.507813 5.902344-39.222657 23.617187-45.125 45.546875-10.542969 40.0625-10.542969 123.148438-10.542969 123.148438s0 83.503906 10.542969 123.148437c5.90625 21.929687 23.195312 39.222656 45.128906 45.128906 40.484375 10.964844 200.328125 10.964844 200.328125 10.964844s160.261719 0 200.328125-10.546875c21.933594-5.902344 39.222656-23.195312 45.128906-45.125 10.542969-40.066406 10.542969-123.148438 10.542969-123.148438s.421875-83.507812-10.546875-123.570312zm0 0"
                               fill="#2c0526"/>
                         <path class="no-hover" d="m204.96875 256 133.269531-76.757812-133.269531-76.757813zm0 0"
